Add styles for active and RWD

--- a/day01/index.html
+++ b/day01/index.html
@@ -7,26 +7,28 @@
     <title>Expanding Cards</title>
   </head>
   <body>
-    <div
-      class="panel active"
-      style="background-image: url(./images/forest.jpg)"
-    >
-      <h3>Befriend majestic trees</h3>
-    </div>
-    <div class="panel" style="background-image: url(./images/lake.jpg)">
-      <h3>Enjoy the blue silence</h3>
-    </div>
-    <div class="panel" style="background-image: url(./images/park.jpg)">
-      <h3>Stroll with reassuring thoughts</h3>
-    </div>
-    <div
-      class="panel"
-      style="background-image: url(./images/the-blue-lagoon.jpg)"
-    >
-      <h3>Dive deep into your heart</h3>
-    </div>
-    <div class="panel" style="background-image: url(./images/home.png)">
-      <h3>Feel at home with yourself!</h3>
+    <div class="container">
+      <div
+        class="panel active"
+        style="background-image: url(./images/forest.jpg)"
+      >
+        <h3>Befriend majestic trees</h3>
+      </div>
+      <div class="panel" style="background-image: url(./images/lake.jpg)">
+        <h3>Enjoy the blue silence</h3>
+      </div>
+      <div class="panel" style="background-image: url(./images/park.jpg)">
+        <h3>Stroll with reassuring thoughts</h3>
+      </div>
+      <div
+        class="panel"
+        style="background-image: url(./images/the-blue-lagoon.jpg)"
+      >
+        <h3>Dive deep into your heart</h3>
+      </div>
+      <div class="panel" style="background-image: url(./images/home.png)">
+        <h3>Feel at home with yourself!</h3>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
