Add basic page content; approach to fix linking

--- a/day03/index.html
+++ b/day03/index.html
@@ -3,18 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /> -->
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>My project</title>
+    <title>Rotating navigation</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+      <div class="circle-container">
+        <button id="close">
+          <i class="fas fa-times"></i>
+        </button>
+        <button id="open">
+          <i class="fas fa-bars"></i>
+        </button>
+      </div>
+      <div class="content">
+        <h1>Amazing Article</h1>
+        <small>John Doe</small>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Exercitationem fugiat perspiciatis sed pariatur provident vitae
+          dolorem obcaecati aperiam a delectus distinctio, suscipit quasi
+          similique in, illum ipsum et deserunt eveniet aspernatur voluptas
+          perferendis natus. Veniam porro aperiam ut soluta accusantium tempore
+          aspernatur explicabo, quisquam dolor alias illo labore eligendi
+          maiores voluptatibus in dolores. Perspiciatis sunt ducimus, ratione
+          quos officiis natus aut, necessitatibus voluptas sequi pariatur
+          placeat sit soluta aliquid ab, qui magnam? Voluptatem fuga soluta
+          saepe voluptas autem voluptate consequuntur in fugiat odio tempore
+          maiores unde non at quaerat praesentium reprehenderit sunt, ipsa
+          consequatur. Reiciendis ex obcaecati odio cumque distinctio!
+        </p>
+        <h3>Some Random Crows</h3>
+        <img src="./crows.jpg" alt="Two crows" />
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+          culpa in aut rem quaerat eligendi ratione. Nobis magni, consequuntur
+          voluptates laboriosam animi blanditiis fugit sequi et. Ut, tempora
+          quaerat perspiciatis consequatur voluptatibus eos velit similique, nam
+          est aliquid obcaecati ad, cupiditate cum commodi consequuntur itaque
+          rerum nisi. Est neque atque voluptate exercitationem aut facere minima
+          hic illo iste officia voluptas consequatur expedita aliquam, unde quae
+          quas quod molestias dicta tempore. Sed ipsum blanditiis repellendus
+          quia!
+        </p>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
