--- a/day07/index.html
+++ b/day07/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    /> -->
     <link rel="stylesheet" href="style.css" />
-    <title>My project</title>
+    <title>Split Landing Page</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+      <div class="split left">
+        <h1>Forest trip</h1>
+        <a href="#" class="btn">Check now</a>
+      </div>
+      <div class="split right">
+        <h1>Beach trip</h1>
+        <a href="#" class="btn">Check now</a>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
