--- a/day09/index.html
+++ b/day09/index.html
@@ -14,12 +14,12 @@
     <title>Sound Board</title>
   </head>
   <body>
-    <audio id="applause" src="./sounds/applause.mp3">Applause</audio>
-    <audio id="boo" src="./sounds/boo.mp3">Boo</audio>
-    <audio id="gasp" src="./sounds/gasp.mp3">Gasp</audio>
-    <audio id="tada" src="./sounds/tada.mp3">Tada</audio>
-    <audio id="victory" src="./sounds/victory.mp3">Victory</audio>
-    <audio id="wrong" src="./sounds/wrong.mp3">Wrong</audio>
+    <audio id="applause" src="./sounds/applause.mp3"></audio>
+    <audio id="boo" src="./sounds/boo.mp3"></audio>
+    <audio id="gasp" src="./sounds/gasp.mp3"></audio>
+    <audio id="tada" src="./sounds/tada.mp3"></audio>
+    <audio id="victory" src="./sounds/victory.mp3"></audio>
+    <audio id="wrong" src="./sounds/wrong.mp3"></audio>
     <div id="buttons"></div>
     <script src="script.js"></script>
   </body>
