--- a/day10/index.html
+++ b/day10/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    /> -->
     <link rel="stylesheet" href="style.css" />
     <title>Daddy Jokes</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+      <h3>Daddy Jokes IV</h3>
+      <div id="joke" class="joke"></div>
+      <button id="jokeBtn" class="btn">Get another joke</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
