Add FAQ content

--- a/day12/index.html
+++ b/day12/index.html
@@ -3,18 +3,88 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /> -->
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>My project</title>
+    <title>FAQ</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <h1>Frequently Asked Questions</h1>
+    <div class="faq-container">
+      <div class="faq">
+        <h3 class="faq-title">
+          What is the role of HTML in front-end development?
+        </h3>
+        <p class="faq-text">
+          HTML (HyperText Markup Language) is the foundational language used to
+          structure content on the web. It defines elements such as headings,
+          paragraphs, links, and images, providing the basic framework for a
+          webpage.
+        </p>
+        <button>
+          <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="faq">
+        <h3 class="faq-title">
+          How does CSS enhance the appearance of a website?
+        </h3>
+        <p class="faq-text">
+          CSS (Cascading Style Sheets) is used to style and layout web pages. It
+          allows developers to apply visual styles such as colors, fonts, and
+          spacing, making the website more attractive and user-friendly.
+        </p>
+        <button>
+          <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="faq">
+        <h3 class="faq-title">
+          What is the purpose of JavaScript in front-end development?
+        </h3>
+        <p class="faq-text">
+          JavaScript is a scripting language that enables dynamic interactions
+          on websites. It allows for the creation of interactive elements like
+          forms, animations, and real-time updates, enhancing the user
+          experience.
+        </p>
+        <button>
+          <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="faq">
+        <h3 class="faq-title">What is responsive web design?</h3>
+        <p class="faq-text">
+          Responsive web design ensures that a website looks and functions well
+          on various devices and screen sizes. It uses flexible layouts, media
+          queries, and scalable images to adapt to the user's device.
+        </p>
+        <button>
+          <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
+        </button>
+      </div>
+    </div>
+    <div class="faq">
+      <h3 class="faq-title">
+        Why are frameworks like React and Angular popular in front-end
+        development?
+      </h3>
+      <p class="faq-text">
+        Frameworks like React and Angular provide structured, efficient ways to
+        build complex user interfaces. They offer reusable components, improved
+        performance, and easier maintenance, making development faster and more
+        scalable.
+      </p>
+      <button>
+        <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
+      </button>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
