Add styling; fix structure

--- a/day12/index.html
+++ b/day12/index.html
@@ -68,23 +68,22 @@
           <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
         </button>
       </div>
+      <div class="faq">
+        <h3 class="faq-title">
+          Why are frameworks like React and Angular popular in front-end
+          development?
+        </h3>
+        <p class="faq-text">
+          Frameworks like React and Angular provide structured, efficient ways
+          to build complex user interfaces. They offer reusable components,
+          improved performance, and easier maintenance, making development
+          faster and more scalable.
+        </p>
+        <button>
+          <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
+        </button>
+      </div>
     </div>
-    <div class="faq">
-      <h3 class="faq-title">
-        Why are frameworks like React and Angular popular in front-end
-        development?
-      </h3>
-      <p class="faq-text">
-        Frameworks like React and Angular provide structured, efficient ways to
-        build complex user interfaces. They offer reusable components, improved
-        performance, and easier maintenance, making development faster and more
-        scalable.
-      </p>
-      <button>
-        <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
-      </button>
-    </div>
-
     <script src="script.js"></script>
   </body>
 </html>
