--- a/day12/index.html
+++ b/day12/index.html
@@ -26,7 +26,7 @@
           paragraphs, links, and images, providing the basic framework for a
           webpage.
         </p>
-        <button>
+        <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
         </button>
       </div>
@@ -39,7 +39,7 @@
           allows developers to apply visual styles such as colors, fonts, and
           spacing, making the website more attractive and user-friendly.
         </p>
-        <button>
+        <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
         </button>
       </div>
@@ -53,7 +53,7 @@
           forms, animations, and real-time updates, enhancing the user
           experience.
         </p>
-        <button>
+        <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
         </button>
       </div>
@@ -64,7 +64,7 @@
           on various devices and screen sizes. It uses flexible layouts, media
           queries, and scalable images to adapt to the user's device.
         </p>
-        <button>
+        <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
         </button>
       </div>
@@ -79,7 +79,7 @@
           improved performance, and easier maintenance, making development
           faster and more scalable.
         </p>
-        <button>
+        <button class="faq-toggle">
           <i class="fas fa-chevron-down"></i> <i class="fas fa-times"></i>
         </button>
       </div>
