--- a/day15/index.html
+++ b/day15/index.html
@@ -14,7 +14,21 @@
     <title>Incrementing counter</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="counter-container">
+      <i class="fab fa-twitter fa-3x"></i>
+      <div class="counter" data-target="12000">12000</div>
+      <span>Twitter Followers</span>
+    </div>
+    <div class="counter-container">
+      <i class="fab fa-youtube fa-3x"></i>
+      <div class="counter" data-target="7000"></div>
+      <span>Youtube Subscribers</span>
+    </div>
+    <div class="counter-container">
+      <i class="fab fa-facebook fa-3x"></i>
+      <div class="counter" data-target="10000"></div>
+      <span>Facebook Fans</span>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
