Add buttons; add some styling

--- a/day18/index.html
+++ b/day18/index.html
@@ -36,6 +36,12 @@
         style="background-image: url('./images/water.jpg')"
       ></div>
     </div>
+    <button class="arrow left-arrow" id="left">
+      <i class="fas fa-arrow-left"></i>
+    </button>
+    <button class="arrow right-arrow" id="right">
+      <i class="fas fa-arrow-right"></i>
+    </button>
     <script src="script.js"></script>
   </body>
 </html>
