--- a/day19/index.html
+++ b/day19/index.html
@@ -16,7 +16,7 @@
         <div class="center-point"></div>
       </div>
       <div class="time"></div>
-      <div class="date"><span class="circle"></span></div>
+      <div class="date" id="date"></div>
     </div>
     <script src="script.js"></script>
   </body>
