--- a/day20/index.html
+++ b/day20/index.html
@@ -11,10 +11,10 @@
       referrerpolicy="no-referrer"
     /> -->
     <link rel="stylesheet" href="style.css" />
-    <title>My project</title>
+    <title>Button Ripple Effect</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <button>Click Me!</button>
     <script src="script.js"></script>
   </body>
 </html>
