--- a/day20/index.html
+++ b/day20/index.html
@@ -14,7 +14,7 @@
     <title>Button Ripple Effect</title>
   </head>
   <body>
-    <button>Click Me!</button>
+    <button class="ripple">Click Me!</button>
     <script src="script.js"></script>
   </body>
 </html>
