Add content with JS; some fixes

--- a/day24/index.html
+++ b/day24/index.html
@@ -8,30 +8,23 @@
   </head>
   <body>
     <div class="card">
-      <div class="card-header animated-bg" id="header">
-        <img src="./glass-sphere.jpg" alt="Glass sphere" />
-      </div>
+      <div class="card-header animated-bg" id="header">&nbsp;</div>
       <div class="card-content">
-        <h3 class="card-title animated-bg animated-bg-text" id="title"></h3>
+        <h3 class="card-title animated-bg animated-bg-text" id="title">
+          &nbsp;
+        </h3>
         <p class="card-excerpt" id="excerpt">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Voluptatibus, animi!
           <span class="animated-bg animated-bg-text">&nbsp;</span>
           <span class="animated-bg animated-bg-text">&nbsp;</span>
           <span class="animated-bg animated-bg-text">&nbsp;</span>
         </p>
         <div class="author">
-          <div class="profile-img animated-bg" id="profile_img">
-            <img
-              src="https://randomuser.me/api/portraits/women/81.jpg"
-              alt=""
-            />
-          </div>
+          <div class="profile-img animated-bg" id="profile_img">&nbsp;</div>
           <div class="author-info">
-            <strong class="animated-bg animated-bg-text">Jane Doe</strong>
-            <small class="animated-bg animated-bg-text" id="date"
-              >Oct 09, 2020</small
+            <strong class="animated-bg animated-bg-text" id="name"
+              >&nbsp;</strong
             >
+            <small class="animated-bg animated-bg-text" id="date">&nbsp;</small>
           </div>
         </div>
       </div>
