--- a/day25/index.html
+++ b/day25/index.html
@@ -3,18 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    /> -->
     <link rel="stylesheet" href="style.css" />
-    <title>My project</title>
+    <title>Sticky Navigation</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <nav class="nav">
+      <div class="container">
+        <h1 class="logo"><a href="/">Find your happiness</a></h1>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="hero">
+      <div class="container">
+        <h1>Happiness is mostly a choice</h1>
+        <p>Do you want to choose it?</p>
+      </div>
+    </div>
+    <section class="container content">
+      <h2>Content one</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis enim
+        in veniam dolorem totam inventore molestiae nam ipsam ab aut eaque
+        doloribus, aspernatur dignissimos eum, itaque nesciunt recusandae
+        deleniti excepturi sint facere! Voluptas quas possimus harum facere
+        pariatur, nesciunt veniam quis earum nemo dolor nostrum dolorum corrupti
+        rem iusto ipsam! Tenetur, doloribus libero. Sit voluptatum velit, ipsum
+        ipsam voluptates mollitia ut at voluptas facere nesciunt sint laborum
+        magnam impedit nulla ex, corporis cum rem eaque animi ipsa excepturi
+        optio repellendus. Molestias vero amet, dolores molestiae aliquid
+        dolorum hic deserunt nesciunt optio eligendi, aspernatur facere error.
+        Modi rem quaerat adipisci iusto.
+      </p>
+      <h2>Content Two</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, dolorum
+        ea nulla, veniam debitis et consequuntur quaerat quasi incidunt ex,
+        illum quibusdam rerum quidem molestias eos? Commodi esse nobis veritatis
+        quisquam minima illo voluptates perspiciatis perferendis tempora! Porro,
+        maiores natus necessitatibus quis aspernatur, omnis est mollitia tempora
+        nesciunt repellat blanditiis nulla nostrum impedit praesentium ex ipsum
+        quam. Sequi, dolore animi!
+      </p>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
