--- a/day25/index.html
+++ b/day25/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <h1 class="logo"><a href="/">Find your happiness</a></h1>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="#" class="current">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Contact</a></li>
@@ -38,6 +38,46 @@
         optio repellendus. Molestias vero amet, dolores molestiae aliquid
         dolorum hic deserunt nesciunt optio eligendi, aspernatur facere error.
         Modi rem quaerat adipisci iusto.
+      </p>
+      <h3>Content Two</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, dolorum
+        ea nulla, veniam debitis et consequuntur quaerat quasi incidunt ex,
+        illum quibusdam rerum quidem molestias eos? Commodi esse nobis veritatis
+        quisquam minima illo voluptates perspiciatis perferendis tempora! Porro,
+        maiores natus necessitatibus quis aspernatur, omnis est mollitia tempora
+        nesciunt repellat blanditiis nulla nostrum impedit praesentium ex ipsum
+        quam. Sequi, dolore animi!
+      </p>
+      <h3>Content Two</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, dolorum
+        ea nulla, veniam debitis et consequuntur quaerat quasi incidunt ex,
+        illum quibusdam rerum quidem molestias eos? Commodi esse nobis veritatis
+        quisquam minima illo voluptates perspiciatis perferendis tempora! Porro,
+        maiores natus necessitatibus quis aspernatur, omnis est mollitia tempora
+        nesciunt repellat blanditiis nulla nostrum impedit praesentium ex ipsum
+        quam. Sequi, dolore animi!
+      </p>
+      <h3>Content Two</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, dolorum
+        ea nulla, veniam debitis et consequuntur quaerat quasi incidunt ex,
+        illum quibusdam rerum quidem molestias eos? Commodi esse nobis veritatis
+        quisquam minima illo voluptates perspiciatis perferendis tempora! Porro,
+        maiores natus necessitatibus quis aspernatur, omnis est mollitia tempora
+        nesciunt repellat blanditiis nulla nostrum impedit praesentium ex ipsum
+        quam. Sequi, dolore animi!
+      </p>
+      <h3>Content Two</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed, dolorum
+        ea nulla, veniam debitis et consequuntur quaerat quasi incidunt ex,
+        illum quibusdam rerum quidem molestias eos? Commodi esse nobis veritatis
+        quisquam minima illo voluptates perspiciatis perferendis tempora! Porro,
+        maiores natus necessitatibus quis aspernatur, omnis est mollitia tempora
+        nesciunt repellat blanditiis nulla nostrum impedit praesentium ex ipsum
+        quam. Sequi, dolore animi!
       </p>
       <h3>Content Two</h3>
       <p>
