--- a/day28/index.html
+++ b/day28/index.html
@@ -32,11 +32,11 @@
           </ul>
 
           <div id="repos">
-            <a href="#" class="repos">Repos 1</a>
-            <a href="#" class="repos">Repos 2</a>
-            <a href="#" class="repos">Repos 3</a>
-            <a href="#" class="repos">Repos 4</a>
-            <a href="#" class="repos">Repos 5</a>
+            <a href="#" class="repo">Repos 1</a>
+            <a href="#" class="repo">Repos 2</a>
+            <a href="#" class="repo">Repos 3</a>
+            <a href="#" class="repo">Repos 4</a>
+            <a href="#" class="repo">Repos 5</a>
           </div>
         </div>
       </div>
