--- a/day28/index.html
+++ b/day28/index.html
@@ -16,37 +16,7 @@
     <form id="form" class="user-form">
       <input type="text" id="search" placeholder="Search a github user" />
     </form>
-    <main id="main">
-      <div class="card">
-        <div>
-          <img
-            src="https://randomuser.me/api/portraits/women/81.jpg"
-            alt=""
-            class="avatar"
-          />
-        </div>
-        <div class="user-info">
-          <h2>Jane Doe</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor,
-            dicta!
-          </p>
-          <ul>
-            <li>300 <strong>Followers</strong></li>
-            <li>30 <strong>Following</strong></li>
-            <li>100 <strong>Repos</strong></li>
-          </ul>
-
-          <div id="repos">
-            <a href="#" class="repo">Repos 1</a>
-            <a href="#" class="repo">Repos 2</a>
-            <a href="#" class="repo">Repos 3</a>
-            <a href="#" class="repo">Repos 4</a>
-            <a href="#" class="repo">Repos 5</a>
-          </div>
-        </div>
-      </div>
-    </main>
+    <main id="main"></main>
     <script src="script.js"></script>
   </body>
 </html>
