--- a/day29/index.html
+++ b/day29/index.html
@@ -11,10 +11,12 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>My project</title>
+    <title>Doube Click Heart</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <h3>Double click on the image to <i class="fas fa-heart"></i> it!</h3>
+    <small>You liked it <span id="times">0</span> times</small>
+    <div class="love-me"></div>
     <script src="script.js"></script>
   </body>
 </html>
