Add text display

--- a/day30/index.html
+++ b/day30/index.html
@@ -7,7 +7,7 @@
     <title>My project</title>
   </head>
   <body>
-    <h1>Lorem ipsum dolor sit amet.</h1>
+    <h1 id="text"></h1>
     <div>
       <label for="speed">Speed:</label>
       <input
