Add basic structure

--- a/day33/index.html
+++ b/day33/index.html
@@ -3,18 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /> -->
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>My project</title>
+    <title>Notes App</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <button class="add" id="add"><i class="fas fa-plus"></i> Add Note</button>
+    <div class="note">
+      <div class="tools">
+        <button class="edit"><i class="fas fa-edit"></i></button>
+        <button class="delete"><i class="fas fa-trash-alt"></i></button>
+      </div>
+      <div class="hidden"></div>
+      <textarea></textarea>
+    </div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/marked/14.0.0/marked.min.js"
+      integrity="sha512-EnAXYDyFPJkTNa50ueQCSHjQGVOp8I9MiRrb3WMeY7x9IO+qdOElSRNvH35Sfk6+0uS4HV954WbpVDKAxjJPiA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
