--- a/day35/index.html
+++ b/day35/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    /> -->
     <link rel="stylesheet" href="style.css" />
-    <title>My project</title>
+    <title>Image Carousel</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="carousel">
+      <div class="image-container" id="imgs">
+        <img src="./images/dumspirospero.png" alt="" />
+        <img src="./images/nullaaetas.png" alt="" />
+        <img src="./images/optimummedicamentum.png" alt="" />
+        <img src="./images/peraspera.png" alt="" />
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
