Add carousel styling

--- a/day35/index.html
+++ b/day35/index.html
@@ -14,6 +14,10 @@
         <img src="./images/optimummedicamentum.png" alt="" />
         <img src="./images/peraspera.png" alt="" />
       </div>
+      <div class="buttons-container">
+        <button id="left" class="btn">Prev</button>
+        <button id="right" class="btn">Next</button>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
