--- a/day38/index.html
+++ b/day38/index.html
@@ -3,18 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /> -->
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>My project</title>
+    <title>Mobile Tab Navigation</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="phone">
+      <img src="./img/copper-teapots.jpg" alt="" class="content show" />
+      <img src="./img/yoga.jpg" alt="" class="content" />
+      <img src="./img/chrysanthemum.jpg" alt="" class="content" />
+      <img src="./img/friendship.jpg" alt="" class="content" />
+      <nav>
+        <ul>
+          <li>
+            <i class="fas fa-home"></i>
+            <p>Home</p>
+          </li>
+          <li>
+            <i class="fas fa-box"></i>
+            <p>Yoga</p>
+          </li>
+          <li>
+            <i class="fas fa-book-open"></i>
+            <p>Blog</p>
+          </li>
+          <li>
+            <i class="fas fa-users"></i>
+            <p>About Us</p>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
