Add menu and content CSS

--- a/day38/index.html
+++ b/day38/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="phone">
-      <img src="./img/copper-teapots.jpg" alt="" class="content show" />
+      <img src="./img/copper-teapots.jpg" alt="" class="content" />
       <img src="./img/yoga.jpg" alt="" class="content" />
       <img src="./img/chrysanthemum.jpg" alt="" class="content" />
       <img src="./img/friendship.jpg" alt="" class="content" />
