Add JS form menu tab interactivity and fix CSS

--- a/day38/index.html
+++ b/day38/index.html
@@ -15,13 +15,13 @@
   </head>
   <body>
     <div class="phone">
-      <img src="./img/copper-teapots.jpg" alt="" class="content" />
+      <img src="./img/copper-teapots.jpg" alt="" class="content show" />
       <img src="./img/yoga.jpg" alt="" class="content" />
       <img src="./img/chrysanthemum.jpg" alt="" class="content" />
       <img src="./img/friendship.jpg" alt="" class="content" />
       <nav>
         <ul>
-          <li>
+          <li class="active">
             <i class="fas fa-home"></i>
             <p>Home</p>
           </li>
